--- a/sample.tex
+++ b/sample.tex
@@ -57,7 +57,7 @@
 
 \begin{document}
 \name{Mehdi Fekih}
-\tagline{Cloud Data Engineer | NLP | Big Data | Computer Vision | Machine Learning | AWS certified}
+\tagline{Cloud Data Engineer \& Data Scientist}
 
 % Photo optionnelle
 \photoR{2.8cm}{photo_profile}
